# ChangeLog for dev-perl/PerlIO-gzip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PerlIO-gzip/ChangeLog,v 1.16 2012/06/24 12:59:16 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -PerlIO-gzip-0.18.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> PerlIO-gzip-0.180.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*PerlIO-gzip-0.180.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +PerlIO-gzip-0.180.0.ebuild:
  Change version scheme

  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  PerlIO-gzip-0.18.ebuild:
  ppc64 stable wrt #289360

  26 Nov 2009; Markus Meier <maekke@gentoo.org> PerlIO-gzip-0.18.ebuild:
  amd64 stable, bug #289360

  24 Oct 2009; nixnut <nixnut@gentoo.org> PerlIO-gzip-0.18.ebuild:
  ppc stable #289360

  22 Oct 2009; Raúl Porcel <armin76@gentoo.org> PerlIO-gzip-0.18.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #289360

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> PerlIO-gzip-0.18.ebuild:
  Stable for HPPA (bug #289360).

  06 Jul 2009; Alexis Ballier <aballier@gentoo.org> PerlIO-gzip-0.18.ebuild:
  keyword ~x86-fbsd

  23 Mar 2009; Raúl Porcel <armin76@gentoo.org> PerlIO-gzip-0.18.ebuild:
  Add ~arm/~ia64/~s390/~sh/~sparc wrt #262547

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> PerlIO-gzip-0.18.ebuild:
  Marked ~hppa (bug #262547).

  20 Mar 2009; Brent Baude <ranger@gentoo.org> PerlIO-gzip-0.18.ebuild:
  Marking PerlIO-gzip-0.18 ~ppc for bug 262547

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  PerlIO-gzip-0.18.ebuild:
  Keyworded on alpha, bug #262547

  15 Mar 2009; Brent Baude <ranger@gentoo.org> PerlIO-gzip-0.18.ebuild:
  Marking PerlIO-gzip-0.18 ~ppc64 for bug 262547

*PerlIO-gzip-0.18 (01 Mar 2009)

  01 Mar 2009; Peter Volkov <pva@gentoo.org> +metadata.xml,
  +PerlIO-gzip-0.18.ebuild: