@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST PerlIO-gzip-0.18.tar.gz 19179 SHA256 67b20e7e4dcc4230a44500dbbc63c6a267b09fdf4d4465275cc98a3f9f31bcf3 SHA512 b2f8cc1f00654ae40625cb8dfd1d529c48fad1578290a307a1dd51b4b57737d6476bdf7a122501984d047b3d01f5f0d49ab3bdd6f2e45f8435fce86eae0aa8f8 WHIRLPOOL 031219d2dbea6fa7e8e6a7b1054f4d8c937b652ff5eaa85f27246b8cd68dfb4683b4a5fa2c48d40de2d4cd789617cbf2a9391de10e41bba52ff9b939078146e4
-EBUILD PerlIO-gzip-0.180.0.ebuild 508 SHA256 34d379b34fd3f3d0092df6bf029f42de50be917204d403cf33fcdd6746f15a4b SHA512 37a451b49542cd196979c3a59be5d83bfcd716d220a6d0b68914fc8469570f937ffadda106a35d5b72b2c2089f8c1519d5435e055686cf9aa29acb27a935164a WHIRLPOOL b27aa407f6e9403f8eac5d84ad284096c848383005d00745e923a79519a5bc9c8aaf1dce0d70f83c7a6b6b87e1473f9ae37f23bcb1640e52a25eb4bb49631ea0
-MISC ChangeLog 2028 SHA256 e423223b67e1a755fe52872b1acec4d431f31a7a96c05419711c064ccbbbcf89 SHA512 d9224406ce8a9e5398483bc73292bee562aec2a558d7b63e3025334f515cf6cbe4bbf05198a0d6156871fa5d7a0a1db25dfce7d00f7f577e157284560c1edbc1 WHIRLPOOL 84a0f7f21bfb0bdd84573616ae051b0182e9a145ff4eba735bd0c86b806e1de023b6131fa355f8892ce1f2df573d5756af4123b12efcd1b025eea847487f3bf5
+EBUILD PerlIO-gzip-0.180.0.ebuild 524 SHA256 7f18202535db9c2b466c8f8aaed4d94f14ddc895556d587012d03ad9bffabe48 SHA512 b3eca7a4cfa6c821c3fc9944bd8f8d81c4c954077aab96e8101b198b9f146e916ba85b3f4828572703fed3ccd2a11e33b20e2cd6be7a8b03d5d329c8e48b9ab8 WHIRLPOOL e0b6aef685c7c8e13e14451f84c7294c63c4408f900e2a7e97fd384147ff1a894b96a8339ec42a301e1e9cb2449b8e7a7544bc472fbb135825b08863a10dd8b0
+MISC ChangeLog 2135 SHA256 3c4575cfee108079bf09ce4ad8b1d6db2cd3a47002ba7e6cfc0a4e7d40beaaf1 SHA512 e6812bf113d6600f106fefa18676a9662b616d375ef910e0486dfc7dcdf7d3d8e4d0e7f0cce36624a4f9e612f8f4452bfe248b4525df6aae5a57c1598d4a1ebc WHIRLPOOL d7f05a2604cb9e8b491296e12a35e357d70bdf022549e4247c061cc3bf6837f8859bffa9d4892f8563df4c40251454d93a43472f74385e368256d2fc15adde23
 MISC metadata.xml 296 SHA256 203a68d21ad9896a86b415e29bfa64b9aacc552b2b14ca69b5fef23fb980f8ac SHA512 0992213f8760f98db4dc8b09494665ea5d670e5bca940822f938b28371743a63f82dbe0eae25a5e9f1f85ac3ff119f5dfa9c179c770a38d75acdd42bbf799fab WHIRLPOOL 73ee36c390448b6ec3a008d5589129a04987e9158830eafbead703cd3092bb4ffaaba6d17c1b6f161e48907471dcc1e32fbda8dfd0de01f96521481b59475532
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEiLBwACgkQvFcC4BYPU0opuACeK7go8kp465zzRGo41kFkSn/P
+Z8IAnRFD/19rmO249NSk5dig2zeYIE6D
+=qt1h
+-----END PGP SIGNATURE-----
