@@ -1,4 +1,21 @@
-DIST xgamer-0.3.0.tar.gz 46410 SHA256 886ac330d3a78985747675725eabe660450faf9fd50c933ffea9056a41a65ebe
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX xgamer-0.6.2-desktopfile.patch 236 SHA256 ab587975898f6b2667601583749e8ab40d103a35cc938987f88124f344616aef SHA512 d2c378c955358067883ebe845be3f183ec2c0f52a712e0548dc80a8f0d12b38baea0ef57674fd7897c4102cbc1f24d48034dc7fd3fe814a1271a2961bdcd9210 WHIRLPOOL 2d638fcbe123fc01252fe6e3457205e907674633ef0f95cb6cca09ae1bb8e328674d1461b4abad6abbcb2259a548b2a06a2a3ffcaebf050fb0c62fc9acb42269
+DIST xgamer-0.3.0.tar.gz 46410 SHA256 886ac330d3a78985747675725eabe660450faf9fd50c933ffea9056a41a65ebe SHA512 a70fbc66015ec087d98fe5b08f076a54f27fd5644969afbef28d058bb06e2f1c63bd2660c8c8e2cd4695ca9131674eeac48ed7531be7c72ceaecfd4b79f5444d WHIRLPOOL 56401b0f702165b9bd9e81e3a5b70d68b73fe7a9df381d466d9c2110242d0f7dfcefb3be728ca74d262022618e140224e570327a0b098d2c79ea59434980a1b7
+DIST xgamer-0.6.2.tar.gz 43222 SHA256 2fdf43166e2dc7806788fe0d3e3ab95581c0e6d1074dae1794960dbf8c494f08 SHA512 caffebe5d4f07f532366e3a5f6ff717251f254d012bb5c33c431538720a2fa301ab8b9cf277771659655cac6fbe2734534146c224ef881486f7dfc51ac992315 WHIRLPOOL 8d0d2a7d392d7f63a3a2a6465fecdedcf18abd1abfbbb14db040ba30177cd612aca152d281c6c23160bbd7434b15e00b0ebc40c0f13d8f9621775a0d3003dfd5
 EBUILD xgamer-0.3.0.ebuild 765 SHA256 80f74f6d36ea3056244dd88c0e72e0e3489435ed2f1631825f13f600e6c00391 SHA512 becd56eb5c3ec175f09c2c69003cce28c48476370b1bfc021ff1a2204e19722c5a2aad52b2166e375fa46bb59be8ce67c20c485f048b9deb07d18dea4e6bfa0f WHIRLPOOL 886b902e5f2f18771fc84872947229618096e0ffd779bbb9e507c43f72bf8d5e3ecab432cc972b3f61395d6f47945833a38b3886aa4a59559cb1ea84c32d3221
-MISC ChangeLog 1419 SHA256 454dc15e489366e79efe945ed0b18b624210db902db388c70f3045a40f20155b SHA512 e4e861c5ab904d2cac24c840e15aa55e36c150c14bb4609acbe30e3746e30805f8bf84ff46110fdc650f023082673d8122173f2ce2e8e8fcb58246c8317e921f WHIRLPOOL 05d558304ce29557460056edfefc08407c4254dfc7f768a6a060d83634aed8f0becaa2f46d3d37a50dcc5871f16aaec0153dfa01c47aaf4f76add52266c23486
+EBUILD xgamer-0.6.2.ebuild 969 SHA256 9395fccea2edb3de3938e39d3268037eacf9ab429f9149922903cb15bb20b0d0 SHA512 c729b745e282ff458d1898390e7b1bd3d6d52051a11b230fcc8cfaf9fea75f5f7d22c6d13e9f2ae32809b82ef9372b8be7303ecd48a7dfca33c6acdc32cb6db5 WHIRLPOOL 2cf2be87c2f0d4377f37ece5a2d4d441c799c9990ead58ac3679bd41a205e20d28db791ba21a150c0ba6e77bf5fda64f96c306f9685ef52a4db2c5a533d99bfa
+MISC ChangeLog 1589 SHA256 5a05fab575c10d039d6f724125dcc6779f84567d5cd3bb98c5c442ce1e6a26c2 SHA512 e1ce2b5dccd0a590f20bca2203a8a913fc86957d0fa83ef03faa1a0baead729e80980dcceed3beb1be94954d57c3cb3bd44a94cb648b1e9ded30d38666f40ce6 WHIRLPOOL 3fb17da5ead4e34d3f8c146628f9726aa73c28bc0445b90596878323ff02ca2c81da2c8ce758d8db79733afbe7c9c24e911c04e099fdb75a109774f7b66da090
 MISC metadata.xml 235 SHA256 be055b98c2a3b85aa8ebf307ac8f8ece50ed7a644c9cde85b785518b00851614 SHA512 9ebda22c0fc97a352baa249ee27be232f8db76f5c4262b7e32190cc02eb2fc439387946ba83f93ed82719e67496fe0501c9b95d2cecddfcc4fa6a081e89cadff WHIRLPOOL 05c0efb0f363a43b271a3d43201753acce9254504d1a547465ac2d43424606fc984beaac0e9316b4c518aca6044747bc4cee7fd113394df8f47819b892931ce0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRIU5jAAoJEFpvPKfnPDWzZ8oH/0EUNpoQNDpLPxbui7FkENQc
+X1yx1jYsO7bR13bnnyl0Cfukg41Ug6Tqbbz+GIc77C12XkQ2u4GZRGTgTZ/f2wvC
+/rHhKWber9kUQYyGyOK1IOj13WV179CZzKUZTv5z6YdiEXfn0BU1ItmMW5A0KdtP
+wKqOeh4S3LFkXgYkCpU1uVE4/GoppuPl0wO7mtY5bwcrsnetXc0ZouMo4dkRb5Mg
+VjQZvO8/nsxRfn8ycA+wv5Q0J3D64OvOHytCfCAmmL0orToWVV90G2YZgJCat1C+
+eSXG2xzpjNgx7UDVdXGzNCpgfkSaXsWDHR1KUrj/2guYUs2oXN9Nl+7troAHVJU=
+=MVM6
+-----END PGP SIGNATURE-----
