@@ -1,25 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX wakeonlan-0.41-ethers-lookup.patch 2284 RMD160 815e04243ab3e8457f5139ecb38f6dab7b9e3875 SHA1 918ac44c68e8b49b8464826e07432b0e406f904d SHA256 091cf1f456e66cf264657ade127cf524b26d1111bc6c0b5c9375cb662d49f20e
-DIST wakeonlan-0.41.tar.gz 6028 RMD160 ddbc2af097bb46bd8afd2c37007c5ed5291ee0e7 SHA1 95ed4be631e291fc07a72d5625a1ee915b35f85f SHA256 581b1b27a7e810ab72668cce4bd9aa9b3e0cea34b2db24dd1a44c09d63ddda98
-EBUILD wakeonlan-0.41-r1.ebuild 643 RMD160 5904ef0d195ba1946d0f57f8534d90232a0b7910 SHA1 da1898f987d31d6da9a24d725291e17946878867 SHA256 9a762c032ac2be155cd3181dc74661f9c533be5837ec1fc99f9b24ce9613e2c4
-MISC ChangeLog 2714 RMD160 0a990310b4ed94dabed43fbc7c004483519b5945 SHA1 473d3162567b3490c9131b9fe7696cd9ee31eaf2 SHA256 44ce69bfbb340cbcc1306488f4fa1bb828c64e6b04ecbf9dd69a621dd05000a2
-MISC metadata.xml 278 RMD160 c410cb8eacd054f909790bdaef1a5764ac101ee7 SHA1 392839063a4dc0a96c1c4716bb882ff9174b7541 SHA256 d842ba848f4a9398a67c4652f01dc590bbbeb6de64fbb29866cf8151cacd0b12
+AUX wakeonlan-0.41-ethers-lookup.patch 2284 SHA256 091cf1f456e66cf264657ade127cf524b26d1111bc6c0b5c9375cb662d49f20e SHA512 39cdee0f2732f4d09822cbb82e4674e966b1648fbdd84b4a8adaf3b734ea2e8e4b5f0d535f7d70dbf3608c23ddc0761de9c5892a5c6c73613f322dc4e71db3d2 WHIRLPOOL 19c4a260e8eea106aadadd686f75358a91ade956397226bd324dddc538772bec8c999375d7b58d55659ebfbbc34e9153733b5c1dc008e7aa3039b0d37e078400
+DIST wakeonlan-0.41.tar.gz 6028 SHA256 581b1b27a7e810ab72668cce4bd9aa9b3e0cea34b2db24dd1a44c09d63ddda98 SHA512 192ed2ad157e3f5af01632b8f2b727e232448e5a9bff6aec25298fa9913ec38f1036b665b141b5299994c88b1941d9896b6eaa92cfdb44d65db3628f50e3824f WHIRLPOOL ac27332a74a2327dc33914c7e4adaffefcc064a5667baa95ac8e43fffc59b4d2917916c073e93bfcfeb23e5141047b032d3f87b8800e9fba81d956e6f40eef46
+EBUILD wakeonlan-0.41-r1.ebuild 656 SHA256 32713805feb3bc4072e1999bc9c285d4ab2b99db2829a4a32fd553df7d03f5bc SHA512 01cba7b0a2a7ac15bf8b38e8bd68992047201f8bbba4cf97672b59b4c0dbfef13f25649f38dbd7c41cf4e86bf7034dff9456477d2f8dac4cd0cb840eb649b2bd WHIRLPOOL 85eca8a83522e2f5d96620e2115fe3bb732f093503a44110f76b417299ac71ed541bcda9cab9eb36b6ad29bce22e2d6caa44b9336ff0071cfa5cbe3b00019aa9
+MISC ChangeLog 2813 SHA256 1efd64079844cbe6217e20ab1d048930b8ff99eef61b6b03fe8279edf30b15ca SHA512 212de3fe3fd51afd0868a865b6a78f015171dce5b2e12872b06ecc43e61b5d24a092f50f1c999373c763fd5a9f035e520a808db530b5ff1a42e580b06b482e73 WHIRLPOOL 357bf02c6384559662c65eee65c3058e8fd6f79e248b9a4068ab800f2c78151fb40b11af88282dabb1fde7d5b486191e3427ba6fe3e772844c3be70787dfa676
+MISC metadata.xml 278 SHA256 d842ba848f4a9398a67c4652f01dc590bbbeb6de64fbb29866cf8151cacd0b12 SHA512 1e9e4f59dff5f18e2f8124721e481a7781039f775daf869127688456d1f43979f57aca56524729b5ea7b53be92cae84f4a4ccf8469f9714a6da295934a902793 WHIRLPOOL 7f24b2a5070384154857b25a5c6a8774c4a546fdf2289c176bdeba8775c604f26d609dc3fad515db16c5d4db77e4da76aac442d683dd6871045a90aef787caa3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPUWDyAAoJEPqDWhW0r/LCKdcP/1JQK6g3fR9kk/Mwlzgjvf9C
-PgL05e378jEyOXswjNON/rlhL8KAI9GIcgSyuClxNuaplP/bO5PavhFl4pMCDhzn
-sm+bE0PLElpvbBjlBvsXOf8jOvblFzNSfSSEaRgZTh4igSNcDCGGhk5w3BNeDfmL
-/zJE2NrPuuPsxKZJ04Ls/VzHVc931liIz6AyBtE2/mPjp9pEq4kgXEeTT50rdMpK
-+nAGIPa3KX2KZvPmeWLPe/gQWtMBUqXpd2g1Fsy4JxKK8gi4uxdpC7+ePD1qRCn4
-6EpUWUIP217Tp2LWClgy/+tPDR+kGD5Cxf+Io86U4UwLJLttcKg14PRX1C7u7bt3
-AWQM+BqkitGFqBAYqnr029aVVkT7IeHfW/b3fS1QiR2dV3FW7V9MFcDOqVAyjU4p
-TD8zixVQdr+7uUvujnFDSTnmkGNkNZApUXB6KLwiNeFJJ2Rge4TBwBQqFNFaSI/t
-JvkXC0qUeWJYqaEVu+l63kQyVY+jLZFMIdAlwmKylxYAd+mdbAiXZcJg4+BCHmv/
-+jxkuT2gtsGVXfPHnq0RHYNaWPHvg12+cpUNG4jSUuzcprZOsO7Mp/RFk4dPXh8d
-QMIotxfAt8uf+hSS75tND1V5y0z0uORkcgFjxC2UYGxb0xTNHI7JWE0JYoH8Cq1a
-aiOcdokr57eBUMybdMH4
-=VG/E
+iEYEAREIAAYFAlEhTfcACgkQ/ejvha5XGaM6NQCg4J70O+XAh9o4RG4c6voHXpkI
+9/YAoNRv25jjIx58BHurwfGosxqi7NcS
+=WB0h
 -----END PGP SIGNATURE-----
