@@ -1,6 +1,12 @@
 # ChangeLog for games-util/xgamer
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.10 2012/11/29 02:09:34 mr_bones_ Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.11 2013/02/17 21:40:50 hasufell Exp $
+
+*xgamer-0.6.2 (17 Feb 2013)
+
+  17 Feb 2013; Julian Ospald <hasufell@gentoo.org> +xgamer-0.6.2.ebuild,
+  +files/xgamer-0.6.2-desktopfile.patch:
+  version bump wrt #452310
 
   29 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> -xgamer-0.2.1.ebuild:
   old
