@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PerlIO-gzip
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PerlIO-gzip/ChangeLog,v 1.16 2012/06/24 12:59:16 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PerlIO-gzip/ChangeLog,v 1.17 2013/02/18 13:26:50 aballier Exp $
+
+  18 Feb 2013; Alexis Ballier <aballier@gentoo.org> PerlIO-gzip-0.180.0.ebuild:
+  keyword ~amd64-fbsd
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
